fix overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 html {
     scroll-behavior: smooth;
 }
